<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orangebackground"

    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/loginButton"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:backgroundTint="@android:color/white"
        android:text="Login"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="332dp"
        android:layout_height="131dp"
        android:layout_marginTop="12dp"

        android:fontFamily="@font/fredoka"
        android:gravity="center"
        android:outlineSpotShadowColor="#FFFFFF"
        android:text="LooseLips"
        android:textColor="#EDE4D6"
        android:textSize="68sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="266dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:gravity="center"
        android:hint="Password"
        android:imeOptions="actionGo"
        android:singleLine="true"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="266dp"
        android:layout_height="40dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:gravity="center"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toEndOf="@+id/textViewForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="Forgot Password?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="267dp"
        android:layout_height="296dp"
        android:layout_marginTop="164dp"

        android:progressTint="#FD9C0E"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>