...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orangebackground"
   android:id="@+id/content"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        style="@style/AudioFileInfoOverlayText"
...
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMOTD"
        android:layout_width="326dp"
        android:layout_height="111dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="188dp"
        android:gravity="center"
        android:text="Your account has been created, but it is still awaiting manual approval by an administrator, check back shortly"
...
