...
    <Button
        android:id="@+id/loginButton"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@android:color/white"
        android:text="Get Started!"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
