<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DashBoardFragment">


    <Button
        android:id="@+id/updateMOTDButton"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@android:color/white"
        android:text="update MOTD"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/editTextMOTD"
        android:layout_width="283dp"
        android:layout_height="199dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:foregroundGravity="center|center_horizontal"
        android:gravity="center|center_vertical"
        android:hint="unable to get secret message"
        android:inputType="textMultiLine"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/updateMOTDButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

</androidx.constraintlayout.widget.ConstraintLayout>